footer overlap fixed

--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,14 @@ html {
     height: 100%;
 }
 body {
-    font-family: 'Inconsolata', 'Roboto Mono', monospace !important;
+    font-family: 'Inconsolata', monospace !important;
     margin-top: 54px;
-    height: 94%;
+    padding-bottom: 117px;
+    height: 100%;
 }
-textarea {
+textarea.form-control {
     box-sizing: border-box;
-    font-size: 80%;
+    font-size: 100%;
     height: 100%;
     width: 100%;
     padding: 15px;
